2012-03-12 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_visual_map.php,
	godmode/reporting/visual_console_builder.wizard.php,
	godmode/reporting/visual_console_builder.php: added lost feature to set into
	the wizard the kind of label ("agent", "module", "agent-module" or empty).
	
	Meged feature from trunk.

2012-03-12 Miguel de Dios  <miguel.dedios@artica.es>

	*include/ajax/agent.php: added the query "get_agents_group" for getting the
	list of agents from a group pass as ajax parameter.
	
	* include/functions_visual_map.php,
	godmode/reporting/visual_console_builder.wizard.php,
	godmode/reporting/visual_console_builder.php: added into the wizzard a field
	group to filter agents, and the feature to choose the item to create with
	the massive wizzard.
	
	Meged feature from trunk.

2012-03-12  Hirofumi Kosaka  <kosaka@rworks.jp>

	* godmode/agentes/planned_downtime.php: Merged from
	trunk. allow cancelling scheduled downtime once it has
	started. Fixed bug #3474901: Planned downtime behavior.

2012-03-08  Sancho Lerena <slerena@artica.es>

	* include/functions_visual_map.php
	operation/visual_console/public_console.php
	operation/visual_console/render_view.php: Changes for new feature
	"Public Visual Console".

2012-03-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/module_manager.php
	 godmode/agentes/configurar_agente.php: Modification in order to 
	 delete synthetics modules or synth module components when a synth
	 module is deleted.
	  
	 Merged bugfix from trunk.

2012-03-07 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/ajax/visual_console_builder.ajax.php: fixed the value and
	undefined var.

2012-03-07 Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/graph_builder.main.php: Added custom seconds
	to period form merged from trunk

2012-03-07 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/graphs/fgraph.php: set by default the font size for bubble to 7.
	