@@ -1,3 +1,13 @@
+2012-03-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+ 
+    * include/functions_ui.php: Skin is not used on logon error.
+    
+    Merged bugfix from trunk.
+    
+	* godmode/menu.php: Delete autorefresh in Pandora db interface.
+	
+	Merged bugfix from trunk.
+
 2012-03-12 Miguel de Dios  <miguel.dedios@artica.es>
 	
 	* include/functions_visual_map.php,
